fixing overflow-x

--- a/src/frontend/public/css/styles.css
+++ b/src/frontend/public/css/styles.css
@@ -26,5 +26,6 @@ img {
 }
 
 #results {
+    overflow-x: hidden;
     overflow-y: auto;
 }
